@@ -1,3 +1,10 @@
+2006-02-15  Vlad Seryakov  <seryakov@users.sf.net>
+
+	src/driver.c:
+	src/nsd.h: Added maxqueuesize parameter to limit incoming 
+	sockets queue size to prevent possible DoS attacks, 
+	default size set to 256.
+
 2006-02-13  Ibrahim Tannir  <itannir@users.sf.net>
 	* nsd/nswin32.c: fixed assigning the stdin, stdout, stderr channels
 	  in order for Tcl to attach them properly when a new thread/interp
